--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+alembic==0.8.8
 click==6.6
 Flask==0.11.1
+Flask-Migrate==2.0.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-pkg-resources==0.0.0
+SQLAlchemy==1.1.3
 Werkzeug==0.11.11
